endpoint for user signup, initial commit

--- a/swiftselect/src/main/resources/application.properties
+++ b/swiftselect/src/main/resources/application.properties
@@ -3,20 +3,19 @@
 # ================================================================================
 server.port = 8080
 
-
 # ================================================================================
 # - POSTGRESQL DATABASE / DATASOURCE
 # ================================================================================
-spring.datasource.url = jdbc:postgresql://localhost:5433/swiftselect
+spring.datasource.url = jdbc:postgresql://localhost:5432/swiftselect
 spring.datasource.username = postgres
-spring.datasource.password = Degame042#
+spring.datasource.password = password
 
 
 # ================================================================================
 # - JPA / HIBERNATE
 # ================================================================================
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -33,3 +32,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.servlet.context-path=/api/v1
+
