--- a/swiftselect/pom.xml
+++ b/swiftselect/pom.xml
@@ -88,8 +88,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.cloudinary</groupId>
-			<artifactId>cloudinary</artifactId>
-			<version>1.0.14</version>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.32.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
