--- a/swiftselect/src/main/resources/application.properties
+++ b/swiftselect/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port = 8080
 # ================================================================================
 # - POSTGRESQL DATABASE / DATASOURCE
 # ================================================================================
-spring.datasource.url = jdbc:postgresql://localhost:5431/swiftselect
+spring.datasource.url = jdbc:postgresql://localhost:5432/swiftselect
 spring.datasource.username = postgres
 spring.datasource.password = password
 
@@ -15,7 +15,7 @@ spring.datasource.password = password
 # - JPA / HIBERNATE
 # ================================================================================
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.format=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -32,4 +32,12 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.servlet.context-path=/api/v1
+
+
+# ===========================================================
+# - CLOUDINARY
+# ===========================================================
+cloudinary.email=${CLOUD_NAME}
+cloudinary.api.key=${API_KEY}
+cloudinary.api.secret=${API_SECRET}
 
