--- a/swiftselect/pom.xml
+++ b/swiftselect/pom.xml
@@ -96,7 +96,12 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.2.0</version>
 		</dependency>
-	</dependencies>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-web</artifactId>-->
+<!--            <version>5.3.23</version>-->
+<!--        </dependency>-->
+    </dependencies>
 
 	<build>
 		<plugins>
