--- a/swiftselect/src/main/resources/application.properties
+++ b/swiftselect/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.password = password
 # - JPA / HIBERNATE
 # ================================================================================
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.format=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
