--- a/swiftselect/src/main/resources/application.properties
+++ b/swiftselect/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port = 8080
 # ================================================================================
 spring.datasource.url = jdbc:postgresql://localhost:5432/swiftselect
 spring.datasource.username = postgres
-spring.datasource.password = Wenger123$
+spring.datasource.password = Chinedum25@
 
 # ================================================================================
 # - JPA / HIBERNATE
@@ -39,4 +39,3 @@ server.servlet.context-path=/api/v1
 cloudinary.email=${CLOUD_NAME}
 cloudinary.api.key=${API_KEY}
 cloudinary.api.secret=${API_SECRET}
-
