Job posts by employer

--- a/swiftselect/src/main/resources/application.properties
+++ b/swiftselect/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.port = 8080
 # ================================================================================
 # - POSTGRESQL DATABASE / DATASOURCE
 # ================================================================================
-spring.datasource.url = jdbc:postgresql://localhost:5432/swiftselect
+spring.datasource.url = jdbc:postgresql://localhost:5433/swiftselect
 spring.datasource.username = postgres
-spring.datasource.password = Chinedum25@
+spring.datasource.password = Degame042#
 
 # ================================================================================
 # - JPA / HIBERNATE
