--- a/swiftselect/src/main/resources/application.properties
+++ b/swiftselect/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # ================================================================================
 # - GENERAL PROPERTIES
 # ================================================================================
-server.port = 8080
+server.port = 2704
 
 # ================================================================================
 # - POSTGRESQL DATABASE / DATASOURCE
 # ================================================================================
-spring.datasource.url = jdbc:postgresql://localhost:5432/swiftselect
+spring.datasource.url = jdbc:postgresql://localhost:5433/swiftselect
 spring.datasource.username = postgres
-spring.datasource.password = password
+spring.datasource.password = Degame042#
 
 # ================================================================================
 # - JPA / HIBERNATE
